[gd_scene load_steps=5 format=3 uid="uid://dp6mn6hteu7c8"]

[ext_resource type="Script" path="res://Scripts/Day Manager.gd" id="1_55kit"]
[ext_resource type="PackedScene" uid="uid://b5s3bweyc5s04" path="res://Scenes/Base Building/task.tscn" id="2_y7rpo"]
[ext_resource type="Script" path="res://Scripts/Task UI.gd" id="3_fg7ww"]
[ext_resource type="Texture2D" uid="uid://b7ymodrpk4h0i" path="res://Art/White Circle.png" id="4_03we1"]

[node name="Day Manager" type="Node2D"]
script = ExtResource("1_55kit")
task = ExtResource("2_y7rpo")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Day Timer UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -72.0
offset_top = 266.0
offset_right = -32.0
offset_bottom = 306.0

[node name="Play Button" type="Button" parent="CanvasLayer/Day Timer UI"]
layout_mode = 0
offset_left = 154.0
offset_top = 13.0
offset_right = 231.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 24
text = "Play
"

[node name="Pause Button" type="Button" parent="CanvasLayer/Day Timer UI"]
layout_mode = 0
offset_left = -94.0
offset_top = 13.0
offset_right = -16.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 24
text = "Pause"

[node name="Panel" type="Panel" parent="CanvasLayer/Day Timer UI"]
layout_mode = 0
offset_left = 11.0
offset_top = 15.0
offset_right = 127.0
offset_bottom = 55.0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Day Timer UI/Panel"]
layout_mode = 0
offset_right = 116.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Day 1[/center]"

[node name="Tasks Button" type="Button" parent="CanvasLayer"]
offset_left = 316.0
offset_top = 279.0
offset_right = 574.0
offset_bottom = 321.0
theme_override_font_sizes/font_size = 24
text = "Tasks
"

[node name="Task UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 356.0
offset_top = 225.0
offset_right = 574.0
offset_bottom = 265.0
script = ExtResource("3_fg7ww")

[node name="Panel" type="Panel" parent="CanvasLayer/Task UI"]
visible = false
layout_mode = 0
offset_left = -40.0
offset_top = -74.0
offset_right = 218.0
offset_bottom = 54.0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Task UI/Panel"]
layout_mode = 0
offset_right = 218.0
offset_bottom = 130.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Task Holder" type="VBoxContainer" parent="CanvasLayer/Task UI/Panel/ScrollContainer"]
clip_contents = true
custom_minimum_size = Vector2(248, 130)
layout_mode = 2
alignment = 2

[node name="Notif Texture" type="TextureRect" parent="CanvasLayer/Task UI"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = -47.0
offset_top = 46.0
offset_right = 313.0
offset_bottom = 406.0
scale = Vector2(0.05, 0.05)
texture = ExtResource("4_03we1")

[node name="Timer" type="Timer" parent="."]

[connection signal="beginNewTask" from="." to="CanvasLayer/Task UI" method="taskNotif"]
[connection signal="pressed" from="CanvasLayer/Day Timer UI/Play Button" to="." method="startTimer"]
[connection signal="pressed" from="CanvasLayer/Day Timer UI/Pause Button" to="." method="pauseTimer"]
[connection signal="pressed" from="CanvasLayer/Tasks Button" to="CanvasLayer/Task UI" method="toggleDisplay"]
[connection signal="timeout" from="Timer" to="." method="nextDay"]
